--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "App that connects all IP addresses on a server to the proxy server",
   "main": "app.js",
   "engines": {
-    "npm": "8.19.2",
-    "node": "v19.0.0",
+    "npm": ">=8.19.2",
+    "node": ">=v19.0.0",
     "pm2": "5.3.0"
   },
   "author": "",
