--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "engines": {
     "npm": ">=8.19.2",
-    "node": ">=v19.0.0",
+    "node": "v19.0.0",
     "pm2": ">=5.3.0"
   },
   "author": "",
